macros/tests/compile-fail/unsupported_ref_str.rs
use gluesql::FromGlueRow;

#[derive(FromGlueRow)]
struct S<'a> {
    v: &'a str,
}

